[tool.poetry]
name = "graphene-flask-tutorial"
version = "0.1.0"
description = "Graphene Flask Tutorial"
authors = ["Claudio Jolowicz <claudio.jolowicz@cyren.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
