[tool.poetry]
name = "graphene-flask-tutorial"
version = "0.1.0"
description = "Graphene Flask Tutorial"
authors = ["Claudio Jolowicz <claudio.jolowicz@cyren.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.8"
graphene-sqlalchemy = "^2.2.2"
flask = "^2.2.5"
flask-graphql = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.1.3"
pytest-cov = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
